Gaussian blur node is visibly squared-off at larger sizes #42401

Closed
opened 2014-10-26 02:18:09 +01:00 by Jason Clarke · 10 comments

System Information
Mac OS X 10.10, AMD 5770

Blender Version
Broken: ee5936c (although I recall it being broken for some time)

Short description of error
The gaussian option on the blur node has a very noticeable squaring-off of the blurred shape. This is more evident at larger sizes, but looking closely I'm not sure if it's really going away with small blurs, or if it's just easier to see at larger sizes.

Exact steps for others to reproduce the error
The attached "square_blur.blend" file contains a simple glowing sphere with some compositing nodes to blur it. One would expect the result to also be round, except it isn't. Open this file, hit render, and note result.

sqaure_blur.blend

**System Information** Mac OS X 10.10, AMD 5770 **Blender Version** Broken: ee5936c (although I recall it being broken for some time) **Short description of error** The gaussian option on the blur node has a very noticeable squaring-off of the blurred shape. This is more evident at larger sizes, but looking closely I'm not sure if it's really going away with small blurs, or if it's just easier to see at larger sizes. **Exact steps for others to reproduce the error** The attached "square_blur.blend" file contains a simple glowing sphere with some compositing nodes to blur it. One would expect the result to also be round, except it isn't. Open this file, hit render, and note result. [sqaure_blur.blend](https://archive.blender.org/developer/F119700/sqaure_blur.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke
Jeroen Bakker was assigned by Bastien Montagne 2014-10-26 09:24:34 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @mont29

Added subscriber: @mont29

Yeah, can confirm this, while fast gaussian gives expected 'all round' result, real gaussian gives squarish thing… not sure it’s a bug or not, tbh.

Yeah, can confirm this, while fast gaussian gives expected 'all round' result, real gaussian gives squarish thing… not sure it’s a bug or not, tbh.
Jeroen Bakker was unassigned by Sergey Sharybin 2014-10-31 09:35:18 +01:00
Sergey Sharybin self-assigned this 2014-10-31 09:35:18 +01:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Gonna to be a theft and steal this one! :)

Gonna to be a theft and steal this one! :)

This issue was referenced by fcc2ca0089

This issue was referenced by fcc2ca008907a897286d1dfcd9c9105677f71ea8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fcc2ca0089.

Closed by commit fcc2ca0089.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42401
No description provided.