source/blender/render/intern/source/initrender.c
@@ -164,8 +164,11 @@ float RE_filter_value(int type, float x)
 			return 1.0f - x;
 			
 		case R_FILTER_GAUSS:
-			x *= gaussfac;
-			return (1.0f / expf(x * x) - 1.0f / expf(gaussfac * gaussfac * 2.25f));
+		{
+			const float two_gaussfac2 = 2.0f * gaussfac * gaussfac;
+			x *= 3.0f * gaussfac;
+			return 1.0f / sqrtf(M_PI * two_gaussfac2) * expf(-x*x / two_gaussfac2);
+		}
 			
 		case R_FILTER_MITCH:
 			return filt_mitchell(x * gaussfac);
